<resources>
    <string name="app_name">Magic Bells</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="table_book">Table book</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
</resources>