<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/action_cart"
        android:enabled="true"
        android:icon="@drawable/cart"
        android:title="@string/cart"/>
    <item
        android:id="@+id/action_table_book"
        android:enabled="true"
        android:icon="@drawable/booking"
        android:title="@string/table_book"/>
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/history"
        android:title="@string/history"/>
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/profile"/>
</menu>